test-services/time-service/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: time-service
  labels:
    name: time-service
  annotations:
    linkerd.io/inject: enabled
