test-services/time-service/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-service
  namespace: time-service
spec:
  selector:
    app: time-service
    version: 0.0.0 
  ports:
    - protocol: TCP
      port: 32476 
      targetPort: time-service
      name: time-service
  type: LoadBalancer
